--- a/index.html
+++ b/index.html
@@ -5,21 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaflet Web Map with Sidebar</title>
-    <link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" media="screen" title="leaflet">
     <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js" charset="utf-8"></script>
     <script src="https://unpkg.com/leaflet.minichart/dist/leaflet.minichart.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div id="sidebar">
-        <h3>GeoJSON Loader</h3>
-        <div class="btn" id="loadFile1">Load GeoJSON File 1</div>
-        <div class="btn" id="loadFile2">Load GeoJSON File 2</div>
     </div>
+
     <div id="map"></div>
-    <script src="script.js"></script>
+
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <script src="script.js"></script>
+
 
 </body>
 
