--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
             </label>
             <input type="range" id="potentialSlider" min="0" max="100" value="50">
         </div>
+        <div id="typeFilter">
+            <label><input type="checkbox" value="Commercial" checked> Commercial</label>
+            <label><input type="checkbox" value="Residential" checked> Residential</label>
+            <label><input type="checkbox" value="Industrial" checked> Industrial</label>
+        </div>
 
     </div>
 
